@@ -57,6 +57,7 @@
 - make autofs wait longer for shutdown completion.
 - fix sss map age not updated.
 - fix remount deadlock.
+- fix umount recovery of busy direct mount.
 
 28/06/2011 autofs-5.0.6
 -----------------------
